--- a/themes/aurora/index.twig
+++ b/themes/aurora/index.twig
@@ -31,7 +31,8 @@
             {% if pages["_meta"].meta.logo %}
                 <div class="logo" aria-hidden="true">
                     <a href="{{ "index"|link }}">
-                        <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
+                        <i class="{{ pages["_meta"].meta.icon }}" aria-hidden="true"></i>
+                        {# <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" /> #}
                     </a>
                 </div>
             {% endif %}
@@ -58,9 +59,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="flash-region">
+            {# <div class="flash-region">
               <img class="flash-img" src="{{ base_url }}/image/tree2.jpg?sc=banner1&a=40,0,0,0">
-            </div>
+            </div> #}
         </div>
     </div>
     <div class="main" role="main">
@@ -69,20 +70,21 @@
         </div>
     </div>
     <div class="footer">
-        <div class="container">
-            <div class="social">
-                <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
-                {% for social in pages["_meta"].meta.social %}
-                    <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-                        <i class="{{ social.icon }}" aria-hidden="true"></i>
-                        <span class="sr-only">{{ social.title }}</span>
-                    </a>
-                {% endfor %}
-            </div>
+        <div class="developed">
             <p>
-                En footer med lite text.
+                Developed by <a href="https://github.com/AuroraBTH/">Niklas 'Aurora' Andersson</a>
             </p>
         </div>
+        <div class="social">
+            <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
+            {% for social in pages["_meta"].meta.social %}
+                <a href="{{ social.url }}" title="{{ social.title }}" role="button">
+                    <i class="{{ social.icon }}" aria-hidden="true"></i>
+                    <span class="sr-only">{{ social.title }}</span>
+                </a>
+            {% endfor %}
+        </div>
+        
     </div>
 
     <script src="{{ theme_url }}/../shared//js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
