--- a/themes/aurora/scss/style.scss
+++ b/themes/aurora/scss/style.scss
@@ -6,10 +6,59 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import '../../shared/fontawesome/scss/regular';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
-@import 'old';
+
+$font-color: rgb(241, 241, 241);
+
+@import 'header';
+@import '../../shared/scss/navigation';
+@import 'footer';
+@import 'typography';
 
 * {
+    box-sizing: border-box;
+    border: 0 none;
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
+}
+
+*:focus {
+    outline: 0;
+}
+
+/*** BASIC LAYOUT ***/
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1 0 auto;
+    background-color: rgb(250, 250, 250);
+}
+
+.header {
+    flex: 0 0 auto;
+}
+
+.main {
+    padding: 5em 0 4em;
+}
+
+.container {
+    max-width: 48em;
+    padding: 0 0.5em;
+    margin: 0 auto;
+}
+
+.widescreen .container {
+    max-width: 72em;
 }
 
 h1,
