--- a/themes/aurora/scss/style.scss
+++ b/themes/aurora/scss/style.scss
@@ -13,6 +13,7 @@ $font-color: rgb(241, 241, 241);
 @import 'header';
 @import '../../shared/scss/navigation';
 @import 'footer';
+@import 'report';
 
 * {
     box-sizing: border-box;
