--- a/themes/aurora/scss/footer.scss
+++ b/themes/aurora/scss/footer.scss
@@ -3,7 +3,7 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    background-color: #d96446;
+    background-color: $accent-color;
     color: #c0c0c0;
 
     .container {
