--- a/themes/aurora/report.twig
+++ b/themes/aurora/report.twig
@@ -65,8 +65,10 @@
         </div>
     </div>
     <div class="main" role="main">
-        <div class="landingpage">
-            {{ content }}
+        <div class="container">
+            <div class="landingpage">
+                {{ content }}
+            </div>
         </div>
     </div>
     <div class="footer">
