--- a/themes/aurora/scss/report.scss
+++ b/themes/aurora/scss/report.scss
@@ -1,5 +1,6 @@
 .landingpage {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 1em 1em;
     padding: 0 1em;
 }
@@ -10,16 +11,25 @@
 }
 
 .kmom-box {
-    grid-column: span 1;
     border: 1px solid rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1em;
+
+    p {
+        padding: 1.5em 0.5em;
+        margin: 0;
+    }
 }
 
 .kmom-box a {
-    text-decoration: underline;
+    width: 100%;
+    background-color: $accent-color;
+    text-align: center;
+
+    h2 {
+        margin-top: 0.6em;
+    }
 }
 
 .kmom-box.project {
@@ -30,6 +40,10 @@
     .landingpage h1,
     .kmom-box,
     .kmom-box.project {
-        grid-column: span 1;
+        grid-column: span 3;
+    }
+
+    .project {
+        margin-bottom: 1em;
     }
 }
