--- a/themes/aurora/scss/style.scss
+++ b/themes/aurora/scss/style.scss
@@ -8,7 +8,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 
 $font-color: rgb(241, 241, 241);
-$accent-color: #d96446;
+$accent-color: rgba(217, 100, 70, 100);
 
 @import 'typography';
 @import 'header';
