--- a/themes/aurora/scss/footer.scss
+++ b/themes/aurora/scss/footer.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     background-color: $accent-color;
-    color: #c0c0c0;
+    color: $font-color;
 
     .container {
         width: 100%;
