--- a/themes/aurora/scss/variables-dark.scss
+++ b/themes/aurora/scss/variables-dark.scss
@@ -1,3 +1,5 @@
 $font-color: rgb(241, 241, 241);
+$font-alternative-color: rgb(241, 241, 241);
 $accent-color: rgba(18, 18, 18);
 $background-color: rgb(40, 40, 40);
+$background-alternative-color: rgba(255, 255, 255, 0.1);
