--- a/themes/aurora/scss/variables.scss
+++ b/themes/aurora/scss/variables.scss
@@ -1,3 +1,5 @@
 $font-color: rgb(12, 12, 12);
+$font-alternative-color: rgb(241, 241, 241);
 $accent-color: rgba(217, 100, 70, 100);
-$background-color: rgb(250, 250, 250);
+$background-color: rgb(242, 242, 242);
+$background-alternative-color: rgba(250, 250, 250);
