--- a/themes/aurora/scss/header.scss
+++ b/themes/aurora/scss/header.scss
@@ -12,7 +12,7 @@
 
     * {
         margin: 0;
-        color: $font-color;
+        color: $font-alternative-color;
         text-shadow: 1px 1px rgba(12, 12, 12);
     }
 
@@ -28,7 +28,7 @@
     * {
         display: block;
         height: 100%;
-        color: $font-color;
+        color: $font-alternative-color;
         text-shadow: 1px 1px rgba(12, 12, 12);
         font-size: 2.5em;
     }
@@ -49,7 +49,7 @@
 .nav *,
 .nav-toggle {
     font-size: 1.1em;
-    color: $font-color;
+    color: $font-alternative-color;
     text-shadow: 1px 1px rgba(12, 12, 12);
 }
 
