--- a/themes/aurora/scss/report.scss
+++ b/themes/aurora/scss/report.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: $background-alternative-color;
 
     p {
         padding: 1.5em 0.5em;
@@ -63,7 +64,7 @@
     font-size: 1.8em;
     text-align: center;
     padding: 0.5em;
-    color: #444;
+    color: $font-color;
     border-bottom: 1px solid transparent;
 
     &:hover {
