--- a/themes/aurora/scss/style.scss
+++ b/themes/aurora/scss/style.scss
@@ -6,6 +6,7 @@
 @import '../../shared/scss/navigation';
 @import 'footer';
 @import 'report';
+@import 'gallery';
 
 * {
     box-sizing: border-box;
