--- a/themes/aurora/scss/header.scss
+++ b/themes/aurora/scss/header.scss
@@ -1,7 +1,7 @@
 /*** BASIC LAYOUT: HEADER ***/
 
 .header {
-    background-image: url('../img/header.jpg');
+    background-image: url('../../../image/header.jpg?w=50%&q=30');
     background-size: cover;
     background-position: center;
 }
